# did-barmm-regional-government

./: .gitignore  README.md  pyproject.toml
NTL Zonal Statistics/: zonal_stat_2011_NTL.xlsx  zonal_stat_2012_NTL.xlsx  zonal_stat_2013_NTL.xlsx  zonal_stat_2014_NTL.xlsx  zonal_stat_2015_NTL.xlsx  zonal_stat_2016_NTL.xlsx  zonal_stat_2017_NTL.xlsx  zonal_stat_2018_NTL.xlsx  zonal_stat_2019_NTL.xlsx  zonal_stat_2020_NTL.xlsx  zonal_stat_2021_NTL.xlsx  zonal_stat_2022_NTL.xlsx  zonal_stat_2023_NTL.xlsx
notebooks/: Effect_of_BARMM_RG_on_Night_time_lights.ipynb  panel_NTL_consolidated.csv
